# gangstarr

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  cliff.toml  dev.py  docker-compose.yml  init.sql  pyproject.toml
.amazonq/rules/memory-bank/: guidelines.md
.github/workflows/: CI.yml  release.yml
.kiro/agents/: gangstarr-dev.json  steeze.json
.kiro/steering/: backend-dev.md  product.md  steeze-prompt.md  structure.md  tech.md
ai_templates/kiro/agents/: steeze.json
ai_templates/kiro/steering/: rules.md  steeze-prompt.md
notes/: about-gangstarr.md  ai-kiro-integration.md  chatgpt-suggestions.md  code_smell_mfr.md  consolidated_output.md  current_output.md  gangstarr_reqs.md  improvements_ai.md  improvements_v0.1.0.md  rust_libs.md
python/gangstarr/: __init__.py  context_manager.py  discipline.py  engine.py  field_tracker.py  graphene.py  middleware.py  pg_royalty.py  premier.py  reporting.py  resolver_index.py  schemas.py  themes.py
python/gangstarr/testapp/: __init__.py  api_views.py  manage.py  models.py  my_module.py  schema.py  schema_dataloader.py  serializers.py  settings.py  urls.py  views.py
python/gangstarr/testapp/.gangstarr/static/: findings.json
python/gangstarr/testapp/.kiro/agents/: steeze.json
python/gangstarr/testapp/fixtures/: chinook.json
python/gangstarr/testapp/management/commands/: populate_statistics.py
python/gangstarr/testapp/migrations/: 0001_initial.py
python/gangstarr/testapp/templates/testapp/: artist_detail.html  home.html
src/: cli.rs  consolidate.rs  correlate.rs  detect.rs  fingerprint.rs  group.rs  lib.rs  models.rs  normalize.rs  pg_royalty.rs  pg_schema.rs  pg_stats.rs  reporter.rs  resolver_index.rs  steeze.rs  storage.rs
src/static_analysis/: mod.rs  models.rs
src/static_analysis/rules/: g101.rs  g102.rs  g103.rs  g104.rs  g105.rs  g106.rs  g107.rs  g108.rs  g109.rs  g110.rs  g111.rs  mod.rs
tests/: test_discipline.py  test_gangstarr.py  test_themes.py
