[package]
name = "gangstarr"
version = "0.7.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gangstarr"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["extension-module"] }
pg_query = "6.1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
postgres = { version = "0.19", default-features = false }
